--- a/index.html
+++ b/index.html
@@ -609,11 +609,11 @@
             </div>
             <div class="right">
                 <ul>
-                    <li><a href="/Home.html"><b>HOME</b></a></li>
-                    <li><a href="/About.html"><b>ABOUT</b></a></li>
-                    <li><a href="/Certificates.html"><b>CERTIFICATES</b></a></li>
-                    <li><a href="/Projects.html"><b>PROJECTS</b></a></li>
-                    <li><a href="/Contactme.html"><b>CONTACT ME</b></a></li>
+                    <li><a href="https://amr3v.github.io/AMR3V/"><b>HOME</b></a></li>
+                    <li><a href="https://amr3v.github.io/About/"><b>ABOUT</b></a></li>
+                    <li><a href="https://amr3v.github.io/Certificates/"><b>CERTIFICATES</b></a></li>
+                    <li><a href="https://amr3v.github.io/Project/"><b>PROJECTS</b></a></li>
+                    <li><a href="https://amr3v.github.io/ContactME/"><b>CONTACT ME</b></a></li>
                 </ul>
             </div>
         </nav>
